[gd_scene load_steps=5 format=3 uid="uid://dwulq63k55vcv"]

[ext_resource type="Script" path="res://scenes/column/column.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(40, 40)

[sub_resource type="Animation" id="2"]
resource_name = "fade_in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5168p"]
_data = {
"fade_in": SubResource("2")
}

[node name="Column" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_type_variation = &"ColumnContainer"
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="ColumnButton" type="Button" parent="."]
custom_minimum_size = Vector2(40, 59)
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"ListItem"
button_mask = 3
text = "0"

[node name="Button1" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
shortcut_in_tooltip = false

[node name="Area2D" type="Area2D" parent="Button1"]
position = Vector2(40, 40)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button1/Area2D"]
shape = SubResource("1")

[node name="Button2" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
shortcut_in_tooltip = false

[node name="Area2D" type="Area2D" parent="Button2"]
position = Vector2(40, 40)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2/Area2D"]
shape = SubResource("1")

[node name="Button3" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
shortcut_in_tooltip = false

[node name="Area2D" type="Area2D" parent="Button3"]
position = Vector2(40, 40)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3/Area2D"]
shape = SubResource("1")

[node name="Button4" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
shortcut_in_tooltip = false

[node name="Area2D" type="Area2D" parent="Button4"]
position = Vector2(40, 40)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button4/Area2D"]
shape = SubResource("1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5168p")
}
